# sprite_cropper

./: .gitignore  README.md  pyproject.toml
sprite_cropper/: cli.py
